Fixed relative href paths issue

--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -64,7 +64,7 @@
                 </div>
                 <div *ngIf="max"
                     class="col s12 portfolio-all al-center">
-                    <a href="/all-portfolio"
+                    <a href="./all-portfolio"
                         class="btn-circle waves-effect tooltipped"
                         data-position="top"
                         data-delay="50"
