--- a/src/app/components/sections/error-section/error-section.component.html
+++ b/src/app/components/sections/error-section/error-section.component.html
@@ -4,7 +4,7 @@
             <div class="col s12">
                 <div class="col s12 blog-wrapper w-block shadow-bg al-center">
                     <h2>{{ message }}</h2>
-                    <a href="./home"
+                    <a routerLink="/home"
                         class="btn-custom waves-effect waves-light">Home Page</a>
                 </div>
             </div>
