--- a/src/app/components/sections/portfolio-section/portfolio-section.component.html
+++ b/src/app/components/sections/portfolio-section/portfolio-section.component.html
@@ -63,7 +63,7 @@
                 </div>
                 <div *ngIf="max"
                     class="col s12 portfolio-all al-center">
-                    <a href="./all-portfolio"
+                    <a routerLink="/all-portfolio"
                         class="btn-circle waves-effect tooltipped"
                         data-position="top"
                         data-delay="50"
