--- a/src/app/components/sections/post-section/post-section.component.html
+++ b/src/app/components/sections/post-section/post-section.component.html
@@ -43,11 +43,11 @@
                         <div class="single-blog-navigation">
                             <a *ngIf="post.id > 1"
                                 class="btn-custom waves-effect"
-                                href="./blog/post/{{ post.id - 1 }}"
+                                routerLink="/blog/post/{{ post.id - 1 }}"
                                 rel="prev">Prev Post</a>
                             <a *ngIf="post.id < postsLength"
                                 class="btn-custom waves-effect"
-                                href="./blog/post/{{ post.id + 1 }}"
+                                routerLink="/blog/post/{{ post.id + 1 }}"
                                 rel="next">Next Post</a>
                         </div>
                     </div>
