--- a/src/app/components/sections/blog-section/blog-section.component.html
+++ b/src/app/components/sections/blog-section/blog-section.component.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="col s12 blog-desc pd-30">
                             <div class="blog-title">
-                                <a href="{{ post.link }}">{{ post.title }}</a>
+                                <a routerLink="{{ post.link }}">{{ post.title }}</a>
                             </div>
                             <div class="blog-data">
                                 <a href="javascript:void(0);"
