--- a/src/app/components/sections/about-section/about-section.component.html
+++ b/src/app/components/sections/about-section/about-section.component.html
@@ -1,4 +1,4 @@
-<div id="about-section"
+<section id="about-section"
     class="about-section">
     <div class="section-content">
         <div class="container">
@@ -37,4 +37,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
