--- a/src/app/components/sections/blog-section/blog-section.component.html
+++ b/src/app/components/sections/blog-section/blog-section.component.html
@@ -1,4 +1,4 @@
-<div id="blog-section"
+<section id="blog-section"
     [ngClass]="{'blog-section': maxPosts, 'all-blog-section': !maxPosts}">
     <div class="container">
         <div class="row">
@@ -67,4 +67,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
