--- a/src/app/components/sections/portfolio-section/portfolio-section.component.html
+++ b/src/app/components/sections/portfolio-section/portfolio-section.component.html
@@ -1,4 +1,4 @@
-<div id="portfolio-section"
+<section id="portfolio-section"
     [ngClass]="{'portfolio-section': title, 'all-portfolio-section': !title}">
     <div class="container">
         <div class="row">
@@ -72,4 +72,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
