--- a/src/app/components/sections/carousel-section/carousel-section.component.html
+++ b/src/app/components/sections/carousel-section/carousel-section.component.html
@@ -1,4 +1,4 @@
-<div id="{{ id }}">
+<section id="{{ id }}">
     <div class="container">
         <div class="row">
             <div class="col s12 section-title">
@@ -26,4 +26,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
