--- a/src/app/components/sections/post-section/post-section.component.html
+++ b/src/app/components/sections/post-section/post-section.component.html
@@ -1,4 +1,4 @@
-<div class="single-blog-section">
+<section class="single-blog-section">
     <div class="container">
         <div class="row">
             <div class="col s12 single-blog-wrapper">
@@ -61,4 +61,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
