Renamed skills-section to skill-section
(It was the only section having name in plural)

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,8 +3,8 @@
 <app-about-section></app-about-section>
 <app-service-section [title]="'I Am Good At'"
     [services]="services"></app-service-section>
-<app-skills-section [title]="'Skills'"
-    [skills]="skills"></app-skills-section>
+<app-skill-section [title]="'Skills'"
+    [skills]="skills"></app-skill-section>
 <app-carousel-section [id]="'technology-section'"
     [title]="'Tools & Technologies'"
     [items]="technologies"></app-carousel-section>
