--- a/src/app/components/sections/top-section/top-section.component.html
+++ b/src/app/components/sections/top-section/top-section.component.html
@@ -14,7 +14,8 @@
         </div>
     </div>
 
-    <a href="{{ repositoryLink }}"
+    <a *ngIf="repositoryLink"
+        href="{{ repositoryLink }}"
         target="_blank"
         class="github-corner"><svg width="80"
             height="80"
@@ -31,37 +32,4 @@
                 fill="currentColor"
                 class="octo-body"></path>
         </svg></a>
-    <style>
-        .github-corner:hover .octo-arm {
-            animation: octocat-wave 560ms ease-in-out
-        }
-
-        @keyframes octocat-wave {
-
-            0%,
-            100% {
-                transform: rotate(0)
-            }
-
-            20%,
-            60% {
-                transform: rotate(-25deg)
-            }
-
-            40%,
-            80% {
-                transform: rotate(10deg)
-            }
-        }
-
-        @media (max-width:500px) {
-            .github-corner:hover .octo-arm {
-                animation: none
-            }
-
-            .github-corner .octo-arm {
-                animation: octocat-wave 560ms ease-in-out
-            }
-        }
-    </style>
 </div>
