:tada: Added possibility to filter posts by tags

--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,3 +1,4 @@
 <app-top-section [image]="'./assets/img/bg-2.jpg'"
     [title]="'Blog'"></app-top-section>
-<app-blog-section [currentPage]="currentPage"></app-blog-section>
+<app-blog-section [currentPage]="currentPage"
+    [tagFilter]="tagFilter"></app-blog-section>
