--- a/src/app/components/sections/post-section/post-section.component.html
+++ b/src/app/components/sections/post-section/post-section.component.html
@@ -29,7 +29,7 @@
                                 <span class="single-blog-taxonomy-item fa fa-tags"></span>
                                 <div>
                                     <a *ngFor="let tag of post.tags"
-                                        href="javascript:void(0);">{{ tag }}</a>
+                                        routerLink="/blog/tag/{{ tag.toLowerCase() }}">{{ tag }}</a>
                                 </div>
                             </div>
                         </div>
