--- a/src/app/components/sections/service-section/service-section.component.html
+++ b/src/app/components/sections/service-section/service-section.component.html
@@ -11,10 +11,7 @@
 
                 <!-- Single Service -->
                 <div *ngFor="let service of services"
-                    class="col l4 m6 s12 service-wrapper wow zoomIn animated"
-                    data-wow-duration="0.5s"
-                    data-wow-delay="0.3s"
-                    data-wow-offset="0">
+                    class="col l4 m6 s12 service-wrapper wow zoomIn animated">
                     <div class="col s12 w-block shadow-bg">
                         <div class="service-center">
                             <div class="service-icon">
