Added type verification for services
using model interfaces

--- a/src/app/components/sections/blog-section/blog-section.component.html
+++ b/src/app/components/sections/blog-section/blog-section.component.html
@@ -24,7 +24,7 @@
                             </div>
                             <div class="blog-data">
                                 <div class="chip mgr-10">
-                                    <img src="{{ post.author.avatar }}"
+                                    <img src="{{ post.author.image }}"
                                         alt="Author">
                                     {{ post.author.name }}
                                 </div>
