--- a/src/app/components/sections/post-section/post-section.component.html
+++ b/src/app/components/sections/post-section/post-section.component.html
@@ -11,7 +11,7 @@
                         <div class="single-blog-title">{{ post.title }}</div>
                         <div class="blog-data">
                             <div class="chip mgr-10">
-                                <img src="{{ post.author.avatar }}"
+                                <img src="{{ post.author.image }}"
                                     alt="Author">
                                 {{ post.author.name }}
                             </div>
