--- a/src/app/components/sections/about-section/about-section.component.html
+++ b/src/app/components/sections/about-section/about-section.component.html
@@ -17,7 +17,7 @@
                             <div class="about-desc pd-0">
                                 <div class="about-section-title">About Me</div>
                                 <div class="about-data">
-                                    <p>{{ author.description }}</p>
+                                    <p>{{ author.bio }}</p>
                                     <div><span>Age</span>{{ author.age }}</div>
                                     <div><span>Address</span>{{ author.address }}</div>
                                     <div><span>Email</span><a href="mailto:{{ author.email }}">{{ author.email }}</a>
