--- a/src/app/components/sections/post-section/post-section.component.html
+++ b/src/app/components/sections/post-section/post-section.component.html
@@ -1,7 +1,7 @@
 <section class="single-blog-section">
     <div class="container">
         <div class="row">
-            <div class="col s12 single-blog-wrapper">
+            <div class="col l8 s12 single-blog-wrapper">
                 <div class="col s12 w-block shadow-bg pd-0">
                     <div class="col s12 single-blog-thumbnail pd-0">
                         <img src="{{ post.image }}"
@@ -15,8 +15,13 @@
                                     alt="Author">
                                 {{ post.author.name }}
                             </div>
-                            <div class="chip">
+                            <div class="chip mgr-10">
                                 <span class="fa fa-calendar mgr-5"></span>{{ post.date | date: 'fullDate' }}
+                            </div>
+                            <div class="chip">
+                                <span class="fa fa-comments mgr-5"></span>
+                                <span class="disqus-comment-count"
+                                    attr.data-disqus-identifier="{{ post.link }}">0 Comments</span>
                             </div>
                         </div>
                         <div class="single-blog-content">
@@ -47,10 +52,54 @@
                     </div>
                 </div>
 
+                <div class="col s12 w-block shadow-bg pd-50 pd-md-40 pd-sm-30 mgt-50">
+                    <div class="single-blog-author">
+                        <h4>About Author</h4>
+                        <img src="{{ post.author.image }}" alt="">
+                        <div class="author-data">
+                            {{ post.author.name }}
+                            <span>{{ post.author.email }}</span>
+                        </div>
+                        <p>{{ post.author.bio }}</p>
+                    </div>
+                </div>
+
                 <div id="comment-section"
                     class="col s12 single-blog-comment comments-area w-block shadow-bg pd-50 pd-md-40 pd-sm-30 mgt-50">
                     <div class="comment-title"><span class="fa fa-comments"></span> Comments</div>
-                    <disqus [identifier]="disqusIdentifier"></disqus>
+                    <disqus [identifier]="post.link"></disqus>
+                </div>
+            </div>
+            <div class="col l4 s12 sidebar-wrapper">
+                <div class="col s12 single-sidebar w-block shadow-bg pdt-30 pdr-30 pdb-40 pdl-30">
+                    <div class="sidebar-title">
+                        Recent Posts
+                    </div>
+                    <div class="related-post-content">
+                        <div *ngFor="let recentPost of recentPosts" class="related-post-single">
+                            <div class="related-post-img image-bg" [ngStyle]="{'background': 'url(' + recentPost.image + ')', 'background-position': 'center top', 'background-repeat': 'no-repeat', 'background-size': 'cover'}"></div>
+                            <div class="related-post-title">
+                                <a routerLink="{{ recentPost.link }}">{{ recentPost.title }}</a>
+                            </div>
+                            <div class="related-post-author">
+                                <div class="chip">
+                                    <img src="{{ recentPost.author.image }}"
+                                        alt="Author">
+                                    {{ recentPost.author.name }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 single-sidebar w-block shadow-bg pd-30">
+                    <div class="sidebar-content">
+                        <div class="sidebar-title">Tags</div>
+                    </div>
+                    <ul>
+                        <li *ngFor="let tag of post.tags">
+                            <a routerLink="/blog/tag/{{ tag.toLowerCase() }}">{{ tag }}</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
