Added some fun facts

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,5 +17,8 @@
 <app-portfolio-section [title]="'Portfolio'"
     [filters]="portfolioFilters"
     [max]="6"></app-portfolio-section>
+<app-reference-section [id]="'fun-fact-section'"
+    [title]="'Fun Fact'"
+    [items]="funFact"></app-reference-section>
 <app-blog-section [title]="'Blog'"
     [maxPosts]="4"></app-blog-section>
