--- a/src/assets/css/color.scss
+++ b/src/assets/css/color.scss
@@ -47,7 +47,7 @@ $base-color: #337ab7;
 .search-submit,
 .error-section a,
 .error-section a:hover,
-.owl-theme .owl-controls .owl-page span{
+.owl-theme .owl-dots .owl-dot span{
 	background-color: $base-color !important;
 }
 
