--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1780,7 +1780,8 @@ ol.ff-roboto-cn li, ul.ff-roboto-cn li{
 }
 
 .reference-img img{
-	width: 60px;
+	display: inline-block !important;
+	width: 60px !important;
 	height: auto;
 	-webkit-border-radius: 100px;
 	-moz-border-radius: 100px;
@@ -1804,6 +1805,24 @@ ol.ff-roboto-cn li, ul.ff-roboto-cn li{
 	font-weight: 600;
 	color: #555555;
 	padding-bottom: 20px;
+}
+
+.owl-theme .owl-dots .owl-dot {
+    margin-top: 20px;
+    padding: 5px 0;
+}
+
+.owl-theme .owl-dots .owl-dot span {
+    opacity: 0.7;
+}
+
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+    opacity: 1;
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
 }
 
 
