Separate tools & technologies section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,8 +5,11 @@
     [services]="services"></app-service-section>
 <app-skill-section [title]="'Skills'"
     [skills]="skills"></app-skill-section>
-<app-carousel-section [id]="'technology-section'"
-    [title]="'Tools & Technologies'"
+<app-carousel-section [id]="'tools-section'"
+    [title]="'Tools'"
+    [items]="tools"></app-carousel-section>
+<app-carousel-section [id]="'technologies-section'"
+    [title]="'Technologies'"
     [items]="technologies"></app-carousel-section>
 <app-timeline-section [id]="'education-section'"
     [title]="'Education'"
