--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,3 +1,3 @@
 <app-top-section [image]="'./assets/img/bg-2.jpg'"
     [isSingle]="true"></app-top-section>
-<app-post-section [id]="postId"></app-post-section>
+<app-post-section [slug]="slug"></app-post-section>
