--- a/src/app/components/sections/blog-section/blog-section.component.html
+++ b/src/app/components/sections/blog-section/blog-section.component.html
@@ -31,7 +31,7 @@
                                 <div class="chip">
                                     <span class="fa fa-comments mgr-5"></span>
                                     <span class="disqus-comment-count"
-                                        attr.data-disqus-identifier="{{ post.link }}">0 Comments</span>
+                                        attr.data-disqus-identifier="{{ post.disqusIdentifier }}">0 Comments</span>
                                 </div>
                             </div>
                             <div class="blog-content">
