--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,9 +14,9 @@
 <app-timeline-section [id]="'education-section'"
     [title]="'Education'"
     [items]="education"></app-timeline-section>
-<app-timeline-section [id]="'experience-section'"
+<!-- <app-timeline-section [id]="'experience-section'"
     [title]="'Experience'"
-    [items]="experience"></app-timeline-section>
+    [items]="experience"></app-timeline-section> -->
 <app-portfolio-section [title]="'Portfolio'"
     [filters]="portfolioFilters"
     [max]="6"></app-portfolio-section>
