--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,9 +5,9 @@
     [services]="services"></app-service-section>
 <app-skill-section [title]="'Skills'"
     [skills]="skills"></app-skill-section>
-<app-carousel-section [id]="'tools-section'"
+<!-- <app-carousel-section [id]="'tools-section'"
     [title]="'Tools'"
-    [items]="tools"></app-carousel-section>
+    [items]="tools"></app-carousel-section> -->
 <app-carousel-section [id]="'technologies-section'"
     [title]="'Technologies'"
     [items]="technologies"></app-carousel-section>
