Rename author address to location

--- a/src/app/components/shared/sections/about-section/about-section.component.html
+++ b/src/app/components/shared/sections/about-section/about-section.component.html
@@ -19,7 +19,7 @@
                                 <div class="about-data">
                                     <p>{{ author.bio }}</p>
                                     <div><span>Age</span>{{ author.age }}</div>
-                                    <div><span>Address</span>{{ author.address }}</div>
+                                    <div><span>Location</span>{{ author.location }}</div>
                                     <div><span>Email</span><a href="mailto:{{ author.email }}">{{ author.email }}</a>
                                     </div>
                                     <div><span>Website</span><a href="{{ author.website }}">{{ author.website }}</a>
